# Robotica_ProyectoFinal

./: CMakeLists.txt  ConfiguracionServidor.py  ControladorRobot.py  I2C_LCD_driver.py  README.md  Robot5_Cinematica.py  Robot5_ComunicacionMaster.py  Robot5_Odometria.py  package.xml  prueba1.py
msg/: GeneralPos.msg  MotorVels.msg  ObstaclesPos.msg  RobotPos.msg
scripts/: ControladorRobot.py  Robot5_Camara.py  Robot5_Cinematica.py  Robot5_ComunicacionMaster.py  Robot5_Ejecucion.sh  Robot5_Movimiento.py  Robot5_Odometria.py  codigoCam.py
